# OpenHC

./: README.md
HSCIDE/ide/backend/api/: cpp_wrapper.py  main.py  pyproject.toml
HSCIDE/ide/backend/cpp/: CMakeLists.txt  Dockerfile
HSCIDE/ide/backend/cpp/Inc/: main.h
HSCIDE/ide/backend/cpp/Src/: main.cpp
HSCIDE/ide/web/: package-lock.json  package.json
HSCIDE/ide/web/src/: App.tsx
HSCIDE/ide/web/src/components/: HelloWorld.tsx
HSCIDE/ide/web/src/services/: api.ts
HSCLang/: README.md  config.json
HSCMake/: .gitignore  pyproject.toml
HSCMake/hscmake/: __init__.py  builder.py  cli.py  model.py  parser.py  rules.py
